content/nomad/v0.11.x/content/docs/commands/deployment/list.mdx
---
layout: docs
page_title: 'Commands: deployment list'
sidebar_title: list
description: |
  The deployment list command is used to list deployments.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2021-11-15T00:00:00.000Z
last_modified: 2021-11-15T00:00:00.000Z
# END AUTO GENERATED METADATA
---

# Command: deployment list

The `deployment list` command is used list all deployments.

## Usage

```plaintext
nomad deployment list [options]
```

The `deployment list` command requires no arguments.

## General Options

@include 'general_options.mdx'

## List Options

- `-json` : Output the deployments in their JSON format.
- `-t` : Format and display the deployments using a Go template.
- `-verbose`: Show full information.

## Examples

List all tracked deployments:

```shell-session
$ nomad deployment list
ID        Job ID   Job Version  Status      Description
8990cfbc  example  2            failed      Deployment marked as failed
62eb607c  example  1            successful  Deployment completed successfully
5f271fe2  example  0            successful  Deployment completed successfully
```
